[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Sprites/arcadeBackground.png" type="Texture" id=1]
[ext_resource path="res://User Interfaces/ConnectionSetUp.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ArcadeBackground" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 1.50588, 0.60475 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -178.5
margin_top = -141.5
margin_right = 88.5
margin_bottom = 9.5

[node name="Username_text_edit" type="LineEdit" parent="VBoxContainer"]
visible = false
margin_right = 267.0
margin_bottom = 24.0
align = 1
placeholder_text = "Enter Username"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
margin_right = 267.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../BackButton")
text = "Join"

[node name="CreateButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 267.0
margin_bottom = 44.0
text = "Create"

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 267.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../JoinButton")
text = "Back"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_IP" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -209.0
margin_right = 23.0
margin_bottom = -195.0

[node name="Start" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -99.0
margin_top = 2.0
margin_right = 9.0
margin_bottom = 34.0
rect_rotation = 0.296812
text = "Start Game"

[connection signal="text_entered" from="VBoxContainer/Username_text_edit" to="." method="_on_Username_text_edit_text_entered"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_Start_pressed"]
